plywood (0.5.3) unstable; urgency=low

  * Debian native packages should not have debian revision numbers.
  * Moved building code in rules to the arch-indep section. 

 -- Monty Taylor <mordred@inaugust.com>  Wed,  8 May 2002 10:32:28 -0500

plywood (0.5.2-2) unstable; urgency=low

  * Added GPL headers to files. 

 -- Monty Taylor <mordred@inaugust.com>  Tue,  7 May 2002 22:49:57 -0500

plywood (0.5.2-1) unstable; urgency=low

  * Removed some extraneous files.
  * Intial debian package upload (closes: #146218)
  * Built as a native debian package.

 -- Monty Taylor <mordred@inaugust.com>  Tue,  7 May 2002 22:48:17 -0500

plywood (0.5.1-3) unstable; urgency=low

  * Fixed a couple of lintian erros. (Still not sure how I'm going to get
    setup.py to not change the #!/usr/bin/python2.2 line. Hmmm.

 -- Monty Taylor (Mordred) <mordred@inaugust.com>  Tue,  7 May 2002 21:56:33 -0500

plywood (0.5.1-2) unstable; urgency=low

  * plywood now no longer starts with #!/usr/bin/python2.2
  * Fixed maintainer field in debian/control
  * Removed debian/python-plywood.files for lintian
  * Cleaned out extraneous files in debian
  * Added COPYING file
  * Put better text in debian/copyright
  * Fixed the man page a little
  * plywood no longer depends on python-plywood or plywood-elisp. Rather, it
    recommends them.
  * Added python2.2 to build-depends
  * Made long descriptions more descriptive

 -- Monty Taylor (Mordred) <mordred@inaugust.com>  Tue,  7 May 2002 17:36:45 -0500

plywood (0.5.1-1) unstable; urgency=low

  * Initial Release.
  * Fixed depends to depend on python2.2, not python
  * I think I'm going to install under /usr now. :)
  * Added in the LaTeX style to the base plywood package. The whole thing
    makes no sense without the LaTeX style. But you could use the LaTeX style
    without the python translator or the emacs editing mode. 

 -- Monty Taylor (Mordred) <mordred@inaugust.com>  Sat,  4 May 2002 13:14:25 -0500
