@@ -25,6 +25,6 @@ setup (name = "Plywood",
        url = "http://inaugust.com/",
 
        py_modules = ['Plywood','WxPly'],
-       scripts = ['plywood'],
+       #scripts = ['plywood'],
 
       )
